apollo-router/src/snapshots/apollo_router__structured_errors__test__error_definition.snap
---
source: apollo-router/src/structured_errors.rs
expression: error.definition()
---
level: error
code: TEST_ERROR__NOT_FOUND
type: failed_precondition
origin: subgraph
detail: The requested resource could not be found but may be available in the future.
attributes:
  attr:
    type: string
    description: Some attribute
actions:
  - Do something
