apollo-router/src/snapshots/apollo_router__structured_errors__test__error_formatting.snap
---
source: apollo-router/src/structured_errors.rs
expression: "SimpleErrorFormatter.format_error(&error, Default::default(), None).unwrap()"
---
message: Bad request
extensions:
  code: TEST_ERROR__BAD_REQUEST
  level: Error
