apollo-router/src/snapshots/apollo_router__structured_errors__test__error_formatting_with_cause.snap
---
source: apollo-router/src/structured_errors.rs
expression: "SimpleErrorFormatter.format_error(&error, Default::default(), None).unwrap()"
---
message: Not found
extensions:
  attr: test
  code: TEST_ERROR__NOT_FOUND
  level: Error
  trace:
    - code: TEST_NESTED_ERROR__NESTED
      message: Nested error
